# dq_cpp

./: CMakeLists.txt  README.md  nodelet_plugin.xml  package.xml
c_generated_code/: Makefile  acados_sim_solver_quadrotor.c  acados_sim_solver_quadrotor.h  acados_solver_quadrotor.c  acados_solver_quadrotor.h  main_quadrotor.c  main_sim_quadrotor.c
c_generated_code/quadrotor_cost/: quadrotor_cost_ext_cost_0_fun.c  quadrotor_cost_ext_cost_0_fun_jac.c  quadrotor_cost_ext_cost_0_fun_jac_hess.c  quadrotor_cost_ext_cost_e_fun.c  quadrotor_cost_ext_cost_e_fun_jac.c  quadrotor_cost_ext_cost_e_fun_jac_hess.c  quadrotor_cost_ext_cost_fun.c  quadrotor_cost_ext_cost_fun_jac.c  quadrotor_cost_ext_cost_fun_jac_hess.c
c_generated_code/quadrotor_model/: quadrotor_impl_dae_fun.c  quadrotor_impl_dae_fun_jac_x_xdot_u.c  quadrotor_impl_dae_fun_jac_x_xdot_u_z.c  quadrotor_impl_dae_fun_jac_x_xdot_z.c  quadrotor_impl_dae_jac_x_xdot_u_z.c
include/dq_cpp/: nmpc_control.h  wrapper.h
src/: nmpc_control.cpp  nodelet.cpp  wrapper.cpp
